# vasp_cmake

./: CMakeLists.txt
cmake/: FindFFTW.cmake  FindFFTWOMP.cmake  FindLibXC.cmake  FindQD.cmake  FindSCALAPACK.cmake  FindWANNIER90.cmake  default_flags.cmake  sources_and_flags_options.cmake
src/: CMakeLists.txt
src/fftlib/: CMakeLists.txt
src/lib/: CMakeLists.txt
src/parser/: CMakeLists.txt
